# terraos

./: .gitignore  Cargo.toml  DESIGN.md  README.md  bootloader.c  bootloader.sh  build.sh  create_cros_persistent.sh  create_rootfs.sh  crossystem.sh  myswitchroot.c  terra.conf  terrastage1.tar.zst  terrastage1_buildroot_2023.02.6.config
assets/: selector.sh
assets/boot/: mount_failed  mounting  starting
assets/boot/root/: failed  searching
assets/ui/: empty  menu
assets/ui/bootloader/: booting  copying  mount_failed  mounting
assets/ui/options/: 0  1  2  3
scripts/: build_all.sh  build_arch_chromeos.sh  build_arch_only.sh  build_aur_packages.sh  build_bootloader.sh  build_cros_persistent.sh  build_rootfs.sh  build_stage1.sh  crossystem.sh
src/: boot.rs  disks.rs  main.rs  tui.rs  utils.rs
src/screens/: bootpartition.rs  bootsquashfs.rs  common.rs  info.rs  main.rs  mod.rs
