[package]
name = "terraos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fs_extra = "1.3.0"
libblkid-rs = "0.3.1"
libc = "0.2.150"
nix = { version = "0.27.1", features = ["mount", "fs", "process"] }
termios = "0.3.3"
